--- a/02_gorgeous_website/index.html
+++ b/02_gorgeous_website/index.html
@@ -44,6 +44,11 @@
 
             <div class="chart-container">
                 <canvas id="agentChart"></canvas>
+                <div class="status-legend">
+                    <span class="legend-item"><span class="dot active"></span> Active</span>
+                    <span class="legend-item"><span class="dot thinking"></span> Thinking</span>
+                    <span class="legend-item"><span class="dot idle"></span> Idle</span>
+                </div>
             </div>
 
             <button class="btn btn-primary" id="addAgentBtn" style="margin-bottom: 2rem;">+ Deploy New Agent</button>
@@ -55,6 +60,9 @@
 
     <footer style="text-align: center; padding: 2rem; color: #94a3b8; border-top: 1px solid rgba(255,255,255,0.1);">
         <p>&copy; 2026 AntiGravity Systems. Built with Node.js & Postgres.</p>
+        <a href="mailto:support@antigravity.sys" class="footer-link"
+            style="color: #60a5fa; text-decoration: none; font-size: 0.9rem; margin-top: 1rem; display: inline-block;">Contact
+            Support</a>
     </footer>
 
 
