--- a/02_gorgeous_website/index.html
+++ b/02_gorgeous_website/index.html
@@ -48,6 +48,7 @@
                     <span class="legend-item"><span class="dot active"></span> Active</span>
                     <span class="legend-item"><span class="dot thinking"></span> Thinking</span>
                     <span class="legend-item"><span class="dot idle"></span> Idle</span>
+                    <textarea name="agentLog" id="agentLog" cols="30" rows="10">xxCXZxcZXcZXCZXC</textarea>
                 </div>
             </div>
 
