UI: Polished Mission Control Log and finalized Full Stack architecture

--- a/02_gorgeous_website/index.html
+++ b/02_gorgeous_website/index.html
@@ -48,7 +48,17 @@
                     <span class="legend-item"><span class="dot active"></span> Active</span>
                     <span class="legend-item"><span class="dot thinking"></span> Thinking</span>
                     <span class="legend-item"><span class="dot idle"></span> Idle</span>
-                    <textarea name="agentLog" id="agentLog" cols="30" rows="10">xxCXZxcZXcZXCZXC</textarea>
+                </div>
+            </div>
+
+            <div class="log-console">
+                <div class="log-header">
+                    <span class="log-title">MISSION CONTROL LOG</span>
+                    <div class="log-dots"><span></span><span></span><span></span></div>
+                </div>
+                <div id="agentLog" class="log-content">
+                    <div class="log-entry">[SYSTEM] Initializing telemetry...</div>
+                    <div class="log-entry">[DATABASE] Connected to PostgreSQL.</div>
                 </div>
             </div>
 
